<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_upravaZapasu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/uprava_zapasu"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_upravJmenoSoupere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/jmeno_soupeře"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/tv_upravaZapasu"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/btn_kalendarUpravaZapasu"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/zobrazit_kalendar"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/et_upravJmenoSoupere"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <EditText
        android:id="@+id/et_upravDatumZapasu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/datum_format"
        android:textSize="20sp"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/btn_kalendarUpravaZapasu"
        app:layout_constraintTop_toBottomOf="@+id/et_upravJmenoSoupere" />

    <Switch
        android:id="@+id/sw_upravaDomaciZapas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/domaci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kalendarUpravaZapasu" />

    <Button
        android:id="@+id/btn_upravZapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/uprav_zapas"
        app:layout_constraintTop_toBottomOf="@+id/sp_sezonyDialog"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/btn_smazZapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/smaz_zapas"
        app:layout_constraintTop_toBottomOf="@+id/btn_upravZapas"
        tools:layout_editor_absoluteX="5dp" />

    <Spinner
        android:id="@+id/sp_sezonyDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/zobrazVse"
        app:layout_constraintTop_toBottomOf="@+id/sw_upravaDomaciZapas"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/btn_upravitVybraneHrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vyber_hrace"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_upravDatumZapasu"
        app:layout_constraintStart_toEndOf="@id/sw_upravaDomaciZapas"/>

</androidx.constraintlayout.widget.ConstraintLayout>