<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_upravaHrace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/uprava_hrace"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_upravJmenoHrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/jmenoHrace"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/tv_upravaHrace"/>

    <Button
        android:id="@+id/btn_kalendarUpravaHrace"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/zobrazit_kalendar"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/et_upravJmenoHrace"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <EditText
        android:id="@+id/et_upravDatumNarozenin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/datum_format"
        android:textSize="20sp"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/btn_kalendarUpravaHrace"
        app:layout_constraintTop_toBottomOf="@+id/et_upravJmenoHrace" />

    <Switch
        android:id="@+id/sw_upravaFanousek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kalendarUpravaHrace"
        android:text="@string/jeFanousek" />

    <Button
        android:id="@+id/btn_upravHrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/uprav_hrace"
        app:layout_constraintTop_toBottomOf="@+id/sw_upravaFanousek"/>

    <Button
        android:id="@+id/btn_smazHrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/smaz_hrace"
        app:layout_constraintTop_toBottomOf="@+id/btn_upravHrace"/>

</androidx.constraintlayout.widget.ConstraintLayout>