<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_opravdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/jste_si_jisti"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:text="@string/ano" />

    <Button
        android:id="@+id/btn_ne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:layout_marginTop="10dp"
        android:text="@string/ne" />
</LinearLayout>