<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/sw_hracZapas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/zobrazeni_zapasu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp_vyberHraceSezony"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_hracZapas" />

    <Button
        android:id="@+id/btn_celkoveStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/zobraz_celkove"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_vyberHraceSezony" />

    <ListView
        android:id="@+id/lv_seznam"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_celkoveStats" />

    <Button
        android:id="@+id/btn_hledej"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/hledej"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_hledej" />

    <EditText
        android:id="@+id/et_hledej"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/hledej"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_hledej"
        app:layout_constraintTop_toTopOf="@+id/sp_vyberHraceSezony" />

</androidx.constraintlayout.widget.ConstraintLayout>